--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,4 @@ edition = "2021"
 description = "A simple threadpool for running a number of jobs on a fixed number of threads."
 license = "GPL-3.0-only"
 readme = "README.md"
+repository = "https://github.com/Pranjal-Patel/swimming-pool"
